--- a/source/templates/main/index.html
+++ b/source/templates/main/index.html
@@ -4,5 +4,7 @@
 <h1>Welcome!</h1>
 <br>
 <p><a href="/logout">Logout</a>
-
+<div id="vue-div">
+        {% include "modals.html" %}
+    </div>
 {% endblock %}
