--- a/source/templates/main/index.html
+++ b/source/templates/main/index.html
@@ -2,6 +2,82 @@
 {% block content %}
 
 <h1>Welcome!</h1>
-<br>
-<p><a href="/logout">Logout</a>
+<link href="{{url_for('static', filename='main.css')}}" rel="stylesheet" media="screen">
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="..." alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    <div class="item">
+      <img src="..." alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    ...
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<!-- Buttons -->
+<section id="intro" class="container">
+                                <br>
+                                <div class="wrapper">
+    <div id="cycle" class="button-1-left">
+        <input type="submit" value "1"/>
+    </div>
+    <div class="image-wrapper">
+        <img src="{{url_for('static', filename='hat.jpg')}}" id="head" />
+    </div>
+    <div id="cycle" class="button-1-right">
+        <input type="submit" value "2"/>
+    </div>
+</div>
+                                <br><br>
+                                <div class="wrapper">
+    <div id="cycle" class="button-2-left">
+        <input type="submit" value "1"/>
+    </div>
+    <div class="image-wrapper">
+        <img src="{{url_for('static', filename='shirt.jpg')}}" id="top" />
+    </div>
+    <div id="cycle" class="button-2-right">
+        <input type="submit" value "2"/>
+    </div>
+</div>
+                                <br><br>
+                                <div class="wrapper">
+    <div id="cycle" class="button-3-left">
+        <input type="submit" value "1"/>
+    </div>
+    <div class="image-wrapper">
+        <img src="{{url_for('static', filename='pants.jpg')}}" id="bottom" />
+    </div>
+    <div id="cycle" class="button-3-right">
+        <input type="submit" value "2"/>
+    </div>
+</div>
+							</section>
+					</div>
+				</div>
 {% endblock %}
