--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -89,10 +89,11 @@
 							</section>
 					</div>
 				</div>
-
-<video id="video" width="640" height="480" autoplay></video>
 <button id="snap">Snap Photo</button>
-<canvas id="canvas" width="640" height="480"></canvas>
+<video id="video" width="300px" height="270px" autoplay></video>
+<button id="save">Save Photo</button>
+<canvas id="canvas" width="300px" height="270px"></canvas>
+
 			<!-- Footer -->
 				<div id="footer-wrapper">
 					<section id="footer" class="container">
